--- a/message/app/src/main/res/values/strings.xml
+++ b/message/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Maps</string>
+    <string name="app_name">Message in a Bottle</string>
     <string name="action_settings">Settings</string>
     <string name="login">Log in</string>
     <string name="signup">Sign up</string>
