--- a/message/app/src/main/res/values/strings.xml
+++ b/message/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="signup">Sign up</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_maps">Maps</string>
+    <string name ="adapter_activity">What</string>
     <string name="search_distance">Search Distance</string>
     <string name="logout_full">Log Out</string>
     <string name="post">Post</string>
